--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:forceDarkAllowed="false"
             android:exported="true" />
 
         <activity android:name=".DetailActivity" />
